--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,7 @@ img{
     display: flex;
     align-items: center;
     height: 72px;
+    border-bottom: 1px solid #e7e9fc;
 }
 .page-header .container{
     display: flex;
@@ -86,7 +87,7 @@ img{
     color: #2e2f42;
 
     display: block;
-    padding: 20px 0;
+    padding: 24px 0;
 }
 .nav-link:hover,
 .nav-link:focus{
@@ -163,7 +164,7 @@ img{
 }
 
 
-.feactures{
+.features{
     padding: 120px 0;
 }
 .visually-hidden {
@@ -181,11 +182,10 @@ img{
 .feature-list{
     display: flex;
     gap: 24px;
-    margin: 0;
-    padding: 0;
+
 }
 .feature-item{
-    flex-basis: calc((100% -3 * 24px) / 4);
+    flex-basis: calc((100% - 72px) / 4);
 }
 .feature-title{
     font-family: "Roboto", sans-serif;  
@@ -200,7 +200,7 @@ img{
 font-family: "Roboto", sans-serif;
 font-weight: 400;
 font-size: 16px;
-line-height: 1.50;
+line-height: 1.5;
 letter-spacing: 0.02em;
 color: #434455;
 }
@@ -301,6 +301,7 @@ padding: 120px 0;
 .container-portfolio{
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
+    border-top: none ;
 }
 .portfolio-card{
     padding: 32px 16px;
@@ -315,7 +316,7 @@ padding: 120px 0;
     letter-spacing: 0.02em;
     color: #2e2f42;
 
-    margin-bottom: 0 0 8px;
+    margin-bottom: 8px;
 }
 .portfolio-type{
     font-family: "Roboto", sans-serif;
@@ -332,7 +333,7 @@ padding: 120px 0;
 .footer{
     background-color: #2e2f42;
 
-    padding: 100px;
+    padding: 100px 0;
 }
 .footer-text{
     font-family: "Roboto", sans-serif;
