--- a/css/styles.css
+++ b/css/styles.css
@@ -187,7 +187,7 @@ img{
 
 }
 .feature-item{
-    flex-basis: calc(( 100% - 72px ) / 4);
+    flex-basis: calc((100% - 3 * 24px) / 4)
 }
 .feature-title{
     font-family: "Roboto", sans-serif;  
