--- a/css/styles.css
+++ b/css/styles.css
@@ -39,12 +39,9 @@ img{
 }
 .container{
     width: 100%;
-    width: 1158px;
-
-    padding-left: 15px ;
-    padding-right: 15px;
-    margin: 0 auto;
+    max-width: 1158px;
     padding: 0 15px;
+    margin: 0 auto;
 }
 .navigation{
     display: flex;
