--- a/css/styles.css
+++ b/css/styles.css
@@ -185,7 +185,7 @@ img{
 
 }
 .feature-info-item{
- width: calc((100% - 3 * 24px) / 4)
+flex-basis: calc((100% - 3 * 24px) / 4);
 }
 .feature-title{
     font-family: "Roboto", sans-serif;  
