--- a/css/styles.css
+++ b/css/styles.css
@@ -185,7 +185,7 @@ img{
 
 }
 .feature-info-item{
-flex-basis: calc((100% - 72px) / 4);
+    width: calc((100% - 72px) / 4);
 }
 .feature-title{
     font-family: "Roboto", sans-serif;  
