--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,11 @@ img{
     height: 72px;
     border-bottom: 1px solid #e7e9fc;
 }
-.page-header .container{
+.nav-container{
+    display: flex;
+    align-items: center;
+}
+/* .page-header .container{
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -36,7 +40,7 @@ img{
     border-bottom: 1px solid #e7e9fc;
     height: 72px;
 
-}
+} */
 .container{
     width: 100%;
     max-width: 1158px;
@@ -182,6 +186,7 @@ img{
 .feature-list{
     display: flex;
     gap: 24px;
+    align-items: center;
 
 }
 .feature-info-item{
